# pyfarm-analytics

./: README.md  pyproject.toml
src/pyfarm/: __init__.py
src/pyfarm/analytics/: __init__.py  analyzer.py  models.py  queries.py
src/pyfarm/analytics/computations/: __init__.py  environment.py  nutrients.py  yield_.py
tests/: test_analyzer.py
