[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyfarm-analytics"
version = "0.1.0"
description = "KPI computation library for the pyfarm ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyfarm-core>=0.1.0",
    "pyfarm-storage>=0.1.0",
    "pydantic>=2.0,<3.0",
    "numpy>=1.24,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
