[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-analytics"
version = "0.1.0"
description = "KPI computation library for the pyfarm ecosystem"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyfarm-core[storage]>=0.1.0",
    "pydantic>=2.0,<3.0",
    "numpy>=1.24,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
